# thirdeye

./: Cargo.toml  README.md  package-lock.json
docker/mongodb/: docker-compose.yml
docker/redis/: docker-compose.yml
third-eye-admin/: .env  README.md  package-lock.json  package.json  vite.config.js
third-eye-admin/src/: App.jsx  App.tsx  Dashboard.tsx  LogIn.jsx  MyMenu.jsx  _dataProvider.ts  _everything.scss  authProvider.tsx  dataProvider.js  dataProvider.ts  index.css  map.jsx  types.d.ts  users.tsx  utils.tsx  visualizations.jsx
third-eye-admin/src/auth/: LogIn.tsx  Login.tsx  authProvider.ts
third-eye-admin/src/devices/: DeviceCreate.tsx  DeviceEdit.tsx  DeviceList.tsx
third-eye-admin/src/events/: EventCreate.tsx  EventEdit.tsx  EventList.jsx
third-eye-admin/src/layout/: AppBar.tsx  Layout.jsx  Menu.tsx  SubMenu.tsx
third-eye-admin/src/routines/: RoutineCreate.jsx  RoutineEdit.jsx  RoutineList.tsx  Schedule.jsx
third-eye-admin/src/themes/: themes.jsx
third-eye-admin/src/users/: UserCreate.tsx  UserEdit.tsx  UserList.tsx  UsersEdit.tsx  UsersList.tsx
third-eye-client/: Cargo.toml  build.rs
third-eye-client/config/: Config.toml
third-eye-client/proto/: data_exchange.proto
third-eye-client/src/: args.rs  config.rs  main.rs
third-eye-server/: Cargo.toml  build.rs  x.sh
third-eye-server/config/: .env  Config.toml  example.env  log_config.yml
third-eye-server/proto/: data_exchange.proto
third-eye-server/src/: args.rs  config.rs  db.rs  main.rs  utils.rs
third-eye-server/src/http/: server.rs
third-eye-server/src/http/middlewares/: authorization.rs
third-eye-server/src/http/routes/: auth.rs  device.rs  group.rs  login.rs  mod.rs  poll_device_change.rs  user.rs
