[package]
name = "ThirdEyeClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1"
prost = "0.12"
tonic = "0.10.2"
log4rs = "1.2"
clap = { version = "4.4", features = ["derive"] }
async-stream = "0.3.5"
serde = "1.0.193"
serde_json = "1.0.108"
toml = "0.8.8"

[build-dependencies]
tonic-build = "0.10.2"
