[package]
name = "third-eye-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1"
prost = "0.12"
tonic = "0.10.2"
log4rs = "1.2"
log = "0.4"
async-stream = "0.3.5"
futures= "0.3"
mongodb = "2.7.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8.8"
actix-web = "4"
actix-cors = "0.6.4"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
argon2 = "0.5"
jsonwebtoken = "9.1.0"
serde_json = "1.0"
redis = "0.23.3"
chrono = "0.4.31"
futures-util = "0.3.29"

[build-dependencies]
tonic-build = "0.10.2"
